main.tf
# Where AWS as provider and its region are set
provider "aws" {
  region = var.region
}

# For the private key generation
resource "tls_private_key" "rsa_4096" {
  algorithm = var.algorithm
  rsa_bits  = var.rsa_bits
}

# Key pair for sshing into the EC2 instance
resource "aws_key_pair" "key_pair" {
  key_name   = var.key_name
  public_key = tls_private_key.rsa_4096.public_key_openssh
}

# Save private key in repo's root dir
resource "local_file" "private_key" {
  content  = tls_private_key.rsa_4096.private_key_pem
  filename = var.key_name

  provisioner "local-exec" {
    command = "chmod 400 ${var.key_name}"
  }
}

# Create a security group
resource "aws_security_group" "sg_ec2" {
  name        = "sg_ec2"
  description = "Security group for EC2"

  # Only allowing my home's public IP
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["77.170.144.215/32"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Create EC2 instance
resource "aws_instance" "app_server" {
  ami                    = var.ami
  instance_type          = var.instance_type
  key_name               = aws_key_pair.key_pair.key_name
  vpc_security_group_ids = [aws_security_group.sg_ec2.id]

  tags = {
    Name = "app_server"
  }

  root_block_device {
    volume_size = 30
    volume_type = "gp2"
  }

  provisioner "local-exec" {
    command = "touch dynamic_inventory.ini"
  }
}

# Template that will be used for ansible inventory
data "template_file" "inventory" {
  template = <<-EOT
    [ec2_instances]
    ${aws_instance.app_server.public_ip} ansible_user=${var.vm_user} ansible_private_key_file=${path.module}/${var.key_name}
    EOT
}

# Render template inside dynamic_inventory.ini file
resource "local_file" "dynamic_inventory" {
  depends_on = [aws_instance.app_server]

  filename = "dynamic_inventory.ini"
  content  = data.template_file.inventory.rendered

  provisioner "local-exec" {
    command = "chmod 400 ${local_file.dynamic_inventory.filename}"
  }
}

# Special resource meant to only run ansible playbook
resource "null_resource" "run_ansible" {
  depends_on = [local_file.dynamic_inventory]

  provisioner "local-exec" {
    command     = "sleep 10 && ansible-playbook -i dynamic_inventory.ini deploy-app.yml"
    working_dir = path.module
  }
}
